Added more functionality Fixed CSS issue Partial DB Issue Resolve

--- a/PHP.Sales.Web/Views/Shared/_Layout.cshtml
+++ b/PHP.Sales.Web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Transactions", "Index", "Transaction", new { area = "" }, new { @class = "navbar-brand" })
+                @*@Html.ActionLink("Reports", "Index", "Report", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
