--- a/PHP.Sales.Web/Views/Transaction/Edit.cshtml
+++ b/PHP.Sales.Web/Views/Transaction/Edit.cshtml
@@ -16,13 +16,45 @@
             <div class="form-group">
                 <!-- LIST OUT SALES CONTENTS -->
 
-                @foreach (var sale in Model.Sales)
-                {
-                    @Html.DisplayFor(modelItem => sale.Name);
-                    @Html.DisplayFor(modelItem => sale.QTY);
-                    @Html.DisplayFor(modelItem => sale.Price);
-                    @Html.DisplayFor(modelItem => sale.GST);
-                }
+                <table>
+                    <tr>
+                        <th>
+                            @Html.DisplayFor(modelItem => Model.Sales.First().ProductID);
+                        </th>
+                        <th>
+                            @Html.DisplayFor(modelItem => Model.Sales.First().Name);
+                        </th>
+                        <th>
+                            @Html.DisplayFor(modelItem => Model.Sales.First().QTY);
+                        </th>
+                        <th>
+                            @Html.DisplayFor(modelItem => Model.Sales.First().Price);
+                        </th>
+                        <th>
+                            @Html.DisplayFor(modelItem => Model.Sales.First().GST);
+                        </th>
+                    </tr>
+                    @foreach (var sale in Model.Sales)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => sale.ProductID);
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => sale.Name);
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => sale.QTY);
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => sale.Price);
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => sale.GST);
+                            </td>
+                        </tr>
+                    }
+            </table>
 
             </div>
             <input type="submit" value="Submit"/>
