--- a/PHP.Sales.Web/Views/Transaction/Index.cshtml
+++ b/PHP.Sales.Web/Views/Transaction/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PHP.Sales.Core.Models.System
+@model IEnumerable<Transaction>
 
 @{
     ViewBag.Title = "Index";
@@ -7,9 +8,38 @@
 
 <h2>Index</h2>
 
-@foreach (Transaction t in Model)
-{
-    @Html.DisplayFor(modelItem => t.ID);
-    @Html.DisplayFor(modelItem => t.PayMethod);
-    @Html.DisplayFor(modelItem => t.SaleTime);
-}
+<p>@Html.ActionLink("Create New", "Create")</p>
+
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.ID)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PayMethod)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.SaleTime)
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var t in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => t.ID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => t.PayMethod)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => t.SaleTime)
+            </td>
+            <td>
+                @Html.ActionLink("View", "Read", new { id = t.ID })
+            </td>
+        </tr>
+    }
+
+</table>
