--- a/PHP.Sales.Web/Views/Transaction/Create.cshtml
+++ b/PHP.Sales.Web/Views/Transaction/Create.cshtml
@@ -58,12 +58,18 @@ $("#addItem").click(function () {
     $.ajax({
         url: this.href,
         cache: false,
-        success: function (html) { $("#editorRows").append(html); }
+        success: function (html) {
+            $("#editorRows").append(html);
+
+            $("a.deleteRow").on("click", function () {
+                $(this).parents("div.editorRow:first").remove();
+                return false;
+            });}
     });
     return false;
 });
 
-$("a.deleteRow").live("click", function () {
+$("a.deleteRow").on("click", function () {
     $(this).parents("div.editorRow:first").remove();
     return false;
 });
