Updated Documentation and Stylesheet

--- a/PHP.Sales.Web/Views/Home/Index.cshtml
+++ b/PHP.Sales.Web/Views/Home/Index.cshtml
@@ -3,5 +3,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Welcome to the Sales Application</h2>
+<p>To begin, please select an option on the above list</p>
 
