--- a/PHP.Sales.Web/Views/Transaction/Read.cshtml
+++ b/PHP.Sales.Web/Views/Transaction/Read.cshtml
@@ -1,5 +1,5 @@
-﻿@using PHP.Sales.Core.Models.System
-@model IEnumerable<Sale>
+﻿﻿@using PHP.Sales.Web.ViewModels
+@model TransactionRowViewModel
 
 @{
     ViewBag.Title = "Read";
@@ -8,59 +8,60 @@
 
 <h2>Read</h2>
 
-@using (Html.BeginForm("Create", "Transaction"))
+@using (Html.BeginForm("Return", "Transaction"))
 {
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ProductID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.QTY)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.GST)
-        </th>
-        <th>
-            Return
-        </th>
-    </tr>
-    @foreach (var s in Model)
-    {
+    <table class="table">
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => s.ProductID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => s.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => s.QTY)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => s.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => s.GST)
-            </td>
-            <td>
-                @Html.HiddenFor(modelItem => s.ID)
-                @Html.CheckBoxFor(modelItem => s.Void)
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.SalesList.First().ProductID)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SalesList.First().Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SalesList.First().QTY)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SalesList.First().Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SalesList.First().GST)
+            </th>
+            <th>
+                Return
+            </th>
         </tr>
-    }
 
-</table>
+        @for (int i = 0; i < Model.SalesList.Count; i++)
+        {
+            <tr>
+                <td>
+                    @Html.HiddenFor(m => m.SalesList[i].ID)
+                    @Html.DisplayFor(m => m.SalesList[i].ProductID)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => m.SalesList[i].Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => m.SalesList[i].QTY)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => m.SalesList[i].Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => m.SalesList[i].GST)
+                </td>
+                <td>
+                    @Html.CheckBoxFor(m => m.SalesList[i].Void)
+                </td>
+            </tr>
+        }
+
+    </table>
 
 
-@Html.ActionLink("Edit", "Edit", new { id = Model.First().TransactionID })
-<br />
-@*@Html.ActionLink("Return", "Create", new { sales = Model.ToList() })*@
-<input type="submit" value="Return Goods" />
+    @Html.ActionLink("Edit", "Edit", new { id = Model.TransactionId })
+    <br />
+    @*@Html.ActionLink("Return", "Create", new { sales = Model.ToList() })*@
+    <input type="submit" value="Return Goods" />
 }
