--- a/PHP.Sales.Web/Views/Shared/_SalesRowEditor.cshtml
+++ b/PHP.Sales.Web/Views/Shared/_SalesRowEditor.cshtml
@@ -1,26 +1,27 @@
 ﻿@using PHP.Sales.Core.Models.System
 @{
     Layout = null;
+    string value = this.ViewData["num"].ToString();
 }
 
 @model Sale
 
-<tr>
-    <td>
-        @Html.TextBoxFor(m => m.ProductID)
-    </td>
-    <td>
-        @Html.TextBoxFor(m => m.Name)
-    </td>
-    <td>
-        @Html.TextBoxFor(m => m.QTY)
-    </td>
-    <td>
-        @Html.TextBoxFor(m => m.Price)
-    </td>
-    <td>
-        @Html.CheckBoxFor(m => m.GST)
+<div>
+    <div>
+        @Html.TextBox(String.Concat("SalesList[", value, "].ProductID"), Model.ProductID)
+    </div>
+    <div>
+        @Html.TextBox(String.Concat("SalesList[", value, "].Name"), Model.Name)
+    </div>
+    <div>
+        @Html.TextBox(String.Concat("SalesList[", value, "].QTY"), Model.QTY)
+    </div>
+    <div>
+        @Html.TextBox(String.Concat("SalesList[", value, "].Price"), Model.Price)
+    </div>
+    <div>
+        @Html.CheckBox(String.Concat("SalesList[", value, "].GST"), Model.GST)
 
         <a href="#" class="deleteRow">delete</a>
-    </td>
-</tr>
+    </div>
+</div>
