Updates to Sales Row and Total Price

--- a/PHP.Sales.Web/Views/Shared/_SalesRowEditor.cshtml
+++ b/PHP.Sales.Web/Views/Shared/_SalesRowEditor.cshtml
@@ -6,7 +6,7 @@
 
 @model Sale
 
-<div>
+<div id="editorRows">
     <div>
         @Html.TextBox(String.Concat("SalesList[", value, "].ProductID"), Model.ProductID)
     </div>
