--- a/PHP.Sales.Web/Views/Shared/_Layout.cshtml
+++ b/PHP.Sales.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                 @Html.ActionLink("Transactions", "Index", "Transaction", new { area = "" }, new { @class = "navbar-text" })
                 @Html.ActionLink("Products", "Index", "Product", new { area = "" }, new { @class = "navbar-text" })
                 @*@Html.ActionLink("Reports", "Index", "Report", new { area = "" }, new { @class = "navbar-text" })*@
+                @Html.ActionLink("Log", "Index", "Log", new { area = "" }, new { @class = "navbar-text" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
