Added Log functionality

--- a/PHP.Sales.Web/Views/Product/Delete.cshtml
+++ b/PHP.Sales.Web/Views/Product/Delete.cshtml
@@ -29,6 +29,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.LowWarn)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LowWarn)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Price)
         </dt>
 
