--- a/PHP.Sales.Web/Views/Product/Details.cshtml
+++ b/PHP.Sales.Web/Views/Product/Details.cshtml
@@ -28,6 +28,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.LowWarn)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LowWarn)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Price)
         </dt>
 
