--- a/PHP.Sales.Web/Views/Product/Edit.cshtml
+++ b/PHP.Sales.Web/Views/Product/Edit.cshtml
@@ -35,6 +35,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.LowWarn, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LowWarn, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.LowWarn, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
