--- a/PHP.Sales.Web/Views/Shared/_ProductListSelector.cshtml
+++ b/PHP.Sales.Web/Views/Shared/_ProductListSelector.cshtml
@@ -1,10 +1,8 @@
 ﻿﻿﻿@using PHP.Sales.Web.ViewModels
 @{
     Layout = null;
-    string num = "0";
-    //string value = this.ViewData["num"].ToString();
 }
 
 @model ProductListViewModel
 
-@Html.DropDownListFor(m => m.ProductId, Model.Products)
+@Html.DropDownList(String.Concat("SalesList[", Model.row, "].ProductID"), Model.Products)
