--- a/PHP.Sales.Web/Views/Transaction/Create.cshtml
+++ b/PHP.Sales.Web/Views/Transaction/Create.cshtml
@@ -21,10 +21,7 @@
                 
                 <div class="form-header">
                     <div>
-                        Product ID
-                    </div>
-                    <div>
-                        Name
+                        Product
                     </div>
                     <div>
                         Quantity
