--- a/PHP.Sales.Web/Views/Transaction/Return.cshtml
+++ b/PHP.Sales.Web/Views/Transaction/Return.cshtml
@@ -18,10 +18,7 @@
             <div class="form-group" id="editorRows">
                 <div class="form-header">
                     <div>
-                        Product ID
-                    </div>
-                    <div>
-                        Name
+                        Product
                     </div>
                     <div>
                         Quantity
