Added Charts Refactored Reports and Log

--- a/PHP.Sales.Web/Views/Shared/_SalesRowEditor.cshtml
+++ b/PHP.Sales.Web/Views/Shared/_SalesRowEditor.cshtml
@@ -8,7 +8,7 @@
 
 <div id="editorRows">
     <div>
-        @Html.Action("AddProduct", new { selected = Model.ProductID, row = value })
+        @Html.Action("AddProduct", "Transaction", new { selected = Model.ProductID, row = value })
     </div>
     <div>
         @Html.TextBox(String.Concat("SalesList[", value, "].QTY"), Model.QTY)
