--- a/PHP.Sales.Web/Views/Report/Create.cshtml
+++ b/PHP.Sales.Web/Views/Report/Create.cshtml
@@ -25,6 +25,13 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.ProductID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Action("AddProduct")
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Start, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Start, new { htmlAttributes = new { @class = "form-control" } })
