--- a/PHP.Sales.Web/Views/Shared/_Layout.cshtml
+++ b/PHP.Sales.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 @Html.ActionLink("Sales Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Transactions", "Index", "Transaction", new { area = "" }, new { @class = "navbar-text" })
                 @Html.ActionLink("Products", "Index", "Product", new { area = "" }, new { @class = "navbar-text" })
-                @*@Html.ActionLink("Reports", "Index", "Report", new { area = "" }, new { @class = "navbar-text" })*@
+                @Html.ActionLink("Reports", "Index", "Report", new { area = "" }, new { @class = "navbar-text" })*
                 @Html.ActionLink("Log", "Index", "Log", new { area = "" }, new { @class = "navbar-text" })
             </div>
             <div class="navbar-collapse collapse">
