--- a/PHP.Sales.Web/Views/Product/Edit.cshtml
+++ b/PHP.Sales.Web/Views/Product/Edit.cshtml
@@ -45,7 +45,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control"/*, Value = String.Format("{0:C}", Model.Price)*/ } })
                 @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
             </div>
         </div>
