--- a/PHP.Sales.Web/Views/Shared/_ReportProductListSelector.cshtml
+++ b/PHP.Sales.Web/Views/Shared/_ReportProductListSelector.cshtml
@@ -5,4 +5,4 @@
 
 @model ProductListViewModel
 
-@Html.DropDownList(String.Concat("ProductID"), Model.Products)
+@Html.DropDownList(String.Concat("ProductID"), Model.Products, new { @class = "form-control" })
