--- a/PHP.Sales.Web/Views/Report/Details.cshtml
+++ b/PHP.Sales.Web/Views/Report/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Chart.Mvc.ComplexChart
 @using Chart.Mvc.Extensions
 
-@model PHP.Sales.Core.Models.System.Report
+@model PHP.Sales.Web.ViewModels.ChartViewModel
 
 @{
     ViewBag.Title = "Details";
@@ -36,35 +36,35 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Report.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Report.Name)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Product.Name)
+            @Html.DisplayNameFor(model => model.Report.Product.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Product.Name)
+            @Html.DisplayFor(model => model.Report.Product.Name)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Start)
+            @Html.DisplayNameFor(model => model.Report.Start)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Start)
+            @Html.DisplayFor(model => model.Report.Start)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.End)
+            @Html.DisplayNameFor(model => model.Report.End)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.End)
+            @Html.DisplayFor(model => model.Report.End)
         </dd>
     </dl>
 </div>
@@ -80,6 +80,6 @@
     </div>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Report.ID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
